--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     </div>
                 </div>
                 <a class=" btn-outline-light pr-5 pl-5 pt-3 pb-3 mt-lg-0 mt-sm-5"
-                    style="font-size: calc(2.5vh + 0.5vw);" href="CV.pdf" target="_blank" rel="noopener noreferrer">
+                    style="font-size: calc(2.5vh + 0.5vw);" href="CV_Bastien_CHANTREL.pdf" target="_blank" rel="noopener noreferrer">
                     <i class="icon-download mr-2"></i>
                     Télécharger mon CV
                 </a>
