--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <title>Bastien Chantrel - Développeur Front-end junior</title>
 
     <!-- Core plugin CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+     <link href="css/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet" />
